include/dm.h


typedef enum {
    DM_OK                = 0,
    DM_ERR_GENERIC       = -1,
    DM_ERR_IO            = -2,
    DM_ERR_MEMORY        = -3,
    DM_ERR_INVALID_PARAM = -4,
    DM_ERR_NOT_FOUND     = -5,
    DM_ERR_INCOMPATIBLE  = -6,
    DM_ERR_NOT_SUPPORTED = -7
} DM_Status;
DM_API const char *dm_version(void);
DM_API uint32_t    dm_version_number(void);   
DM_API DM_Status   dm_init(void);
DM_API const char *dm_strerror(DM_Status code);
typedef void *DM_Dataset;
DM_API DM_Dataset dm_dataset_open  (const char *path, const char *type);
DM_API size_t     dm_dataset_count (DM_Dataset ds);
DM_API uint32_t   dm_dataset_max_id(DM_Dataset ds);
DM_API void       dm_dataset_free  (DM_Dataset ds);
typedef void *DM_Algorithm;
DM_API DM_Algorithm dm_algorithm_create(const char *id);
DM_API DM_Status    dm_algorithm_run   (DM_Algorithm algo,
                                        const char  *dataset_path,
                                        const char  *output_path,
                                        double       min_support,
                                        const char **extra_args);  
DM_API DM_Status    dm_algorithm_list  (char *buf, int buf_size);  
DM_API void         dm_algorithm_free  (DM_Algorithm algo);
typedef void *DM_Tokenizer;
DM_API DM_Tokenizer dm_tokenizer_create    (const char *type);
DM_API DM_Status    dm_tokenizer_train     (DM_Tokenizer tok,
                                            const char  *corpus_path,
                                            int          vocab_size,
                                            const char  *output_path);
DM_API DM_Status    dm_tokenizer_load      (DM_Tokenizer tok, const char *model_path);
DM_API DM_Status    dm_tokenizer_encode    (DM_Tokenizer  tok,
                                            const char   *text,
                                            uint32_t     *out_ids,
                                            int          *in_out_len);  
DM_API DM_Status    dm_tokenizer_decode    (DM_Tokenizer   tok,
                                            const uint32_t *ids,
                                            int             n_ids,
                                            char           *out_buf,
                                            int             buf_size);
DM_API int          dm_tokenizer_vocab_size(DM_Tokenizer tok);
DM_API const char  *dm_tokenizer_token_text(DM_Tokenizer tok, uint32_t id, uint32_t *out_len);
DM_API void         dm_tokenizer_free      (DM_Tokenizer tok);
DM_API DM_Status dm_tokenizer_volt_run(const char *corpus_path,
                                       int         min_size,
                                       int         max_size,
                                       int         n_steps,
                                       const char *output_path);
typedef void *DM_Vision;
DM_API DM_Vision  dm_vision_create (const char *model_type);
DM_API DM_Status  dm_vision_init   (DM_Vision   v,
                                    const char *saved_model_dir,
                                    int         classes,
                                    int         image_size,
                                    float       width_mult,
                                    float       learning_rate);
DM_API DM_Status  dm_vision_train  (DM_Vision   v,
                                    const char *manifest_path,
                                    int         epochs,
                                    int         batch_size,
                                    float       lr);
DM_API DM_Status  dm_vision_eval   (DM_Vision   v,
                                    const char *manifest_path,
                                    float      *out_loss,
                                    float      *out_accuracy);
DM_API DM_Status  dm_vision_predict(DM_Vision    v,
                                    const float *rgb,
                                    int          h,
                                    int          w,
                                    float       *out_probs,
                                    int          n_classes);
DM_API DM_Status  dm_vision_save   (DM_Vision v);
DM_API void       dm_vision_free   (DM_Vision v);
typedef void *DM_LM;
DM_API DM_LM     dm_lm_create   (const char *model_type);
DM_API DM_Status  dm_lm_train   (DM_LM lm,
                                  const char *corpus_path,
                                  const char *checkpoint_dir,
                                  int         epochs,
                                  int         batch_size,
                                  float       lr);
DM_API DM_Status  dm_lm_generate(DM_LM        lm,
                                  const char  *prompt,
                                  int          max_tokens,
                                  char        *out_buf,
                                  int          buf_size);
DM_API DM_Status  dm_lm_load    (DM_LM lm, const char *checkpoint_dir);
DM_API void       dm_lm_free    (DM_LM lm);
typedef enum {
    DM_BENCH_PHASE_LOAD  = 0,
    DM_BENCH_PHASE_ALGO  = 1,
    DM_BENCH_PHASE_WRITE = 2,
    DM_BENCH_PHASE_TOTAL = 3
} DM_BenchPhase;
typedef struct {
    double  phase_times_ms[4];       
    size_t  peak_memory_kb;          
    double  user_cpu_ms;             
    double  sys_cpu_ms;              
    size_t  result_ram_bytes;        
    size_t  result_disk_est_bytes;   
    size_t  num_patterns;            
    size_t  total_items;             
    double  throughput_mb_s;         
} DM_BenchReport;
DM_API void           dm_bench_reset        (void);
DM_API void           dm_bench_start        (DM_BenchPhase phase);
DM_API void           dm_bench_stop         (DM_BenchPhase phase);
DM_API void           dm_bench_record       (size_t num_patterns, size_t total_items);
DM_API DM_BenchReport dm_bench_get_report   (void);
DM_API void           dm_bench_print        (const char *algo_name, const char *dataset_name);
typedef void *DM_BitSet;
DM_API DM_BitSet dm_bitset_create  (size_t n_bits);
DM_API DM_BitSet dm_bitset_copy    (DM_BitSet src);
DM_API void      dm_bitset_free    (DM_BitSet bs);
DM_API void      dm_bitset_set     (DM_BitSet bs, size_t pos);
DM_API void      dm_bitset_clear   (DM_BitSet bs, size_t pos);
DM_API bool      dm_bitset_get     (DM_BitSet bs, size_t pos);
DM_API void      dm_bitset_and     (DM_BitSet dest, DM_BitSet src);
DM_API void      dm_bitset_or      (DM_BitSet dest, DM_BitSet src);
DM_API void      dm_bitset_not     (DM_BitSet bs);
DM_API void      dm_bitset_set_all (DM_BitSet bs);
DM_API size_t    dm_bitset_popcount(DM_BitSet bs);
typedef void *DM_DataGen;
DM_API DM_DataGen dm_datagen_create  (const char *type);
DM_API DM_Status  dm_datagen_run     (DM_DataGen  gen,
                                      const char *spec_path_or_params,
                                      const char *output_path,
                                      unsigned    seed);
DM_API void       dm_datagen_free    (DM_DataGen gen);
DM_API int dm_cli_run(const char *command, int argc, char **argv);
typedef void *DM_GpuCtx;
DM_API DM_GpuCtx dm_gpu_create     (int device_index, const char *shader_dir);
DM_API void      dm_gpu_free       (DM_GpuCtx ctx);
DM_API int       dm_gpu_ready      (DM_GpuCtx ctx);   
DM_API int       dm_gpu_device_name(DM_GpuCtx ctx, char *buf, size_t buf_len);
DM_API double dm_timer_now(void);
DM_API double dm_peak_ram_mb(void);
DM_API double dm_file_size_mb(const char *path);
DM_API double dm_dir_size_mb(const char *path);
DM_API int  dm_ensure_dir(const char *path);
DM_API const char *dm_path_basename(const char *path);
DM_API void dm_experiment_write_header(const char *csv_path);
DM_API void dm_experiment_generate_report(const char *results_root);