bindings/java/com/dm/DM.java

package com.dm;

import com.sun.jna.*;
import com.sun.jna.ptr.*;

/**
 * Java bindings for libdm — JNA (Java Native Access).
 *
 * <h3>Dependency</h3>
 * Add JNA to your build:
 * <pre>
 * Maven:  &lt;dependency&gt;&lt;groupId&gt;net.java.dev.jna&lt;/groupId&gt;
 *             &lt;artifactId&gt;jna&lt;/artifactId&gt;&lt;version&gt;5.14.0&lt;/version&gt;&lt;/dependency&gt;
 * Gradle: implementation 'net.java.dev.jna:jna:5.14.0'
 * </pre>
 *
 * <h3>Usage</h3>
 * <pre>{@code
 * System.setProperty("jna.library.path", "/path/to/dir/containing/libdm");
 * System.out.println(DM.version());
 *
 * try (DM.Algorithm algo = new DM.Algorithm("fpgrowth")) {
 *     algo.run("data.txt", "out.txt", 0.05);
 * }
 * }</pre>
 *
 * SPDX-License-Identifier: MIT
 */
public final class DM {

    // ── Status constants ──────────────────────────────────────────────────────

    public static final int DM_OK                =  0;
    public static final int DM_ERR_GENERIC       = -1;
    public static final int DM_ERR_IO            = -2;
    public static final int DM_ERR_MEMORY        = -3;
    public static final int DM_ERR_INVALID_PARAM = -4;
    public static final int DM_ERR_NOT_FOUND     = -5;
    public static final int DM_ERR_INCOMPATIBLE  = -6;
    public static final int DM_ERR_NOT_SUPPORTED = -7;

    // Benchmark phase constants
    public static final int BENCH_LOAD  = 0;
    public static final int BENCH_ALGO  = 1;
    public static final int BENCH_WRITE = 2;
    public static final int BENCH_TOTAL = 3;

    // ── Native interface ──────────────────────────────────────────────────────

    interface Native extends Library {
        Native INSTANCE = (Native) LibraryLoader.load();

        // § 1  Core
        String    dm_version();
        int       dm_version_number();
        int       dm_init();
        String    dm_strerror(int code);

        // § 2  Dataset
        Pointer   dm_dataset_open   (String path, String type);
        NativeLong dm_dataset_count (Pointer ds);
        int        dm_dataset_max_id(Pointer ds);
        void       dm_dataset_free  (Pointer ds);

        // § 3  Algorithm
        Pointer dm_algorithm_create(String id);
        int     dm_algorithm_run   (Pointer algo, String datasetPath,
                                    String outputPath, double minSupport,
                                    String[] extraArgs);
        int     dm_algorithm_list  (byte[] buf, int bufSize);
        void    dm_algorithm_free  (Pointer algo);

        // § 4  Tokenizer
        Pointer dm_tokenizer_create    (String type);
        int     dm_tokenizer_train     (Pointer tok, String corpusPath,
                                        int vocabSize, String outputPath);
        int     dm_tokenizer_load      (Pointer tok, String modelPath);
        int     dm_tokenizer_encode    (Pointer tok, String text,
                                        int[] outIds, IntByReference inOutLen);
        int     dm_tokenizer_decode    (Pointer tok, int[] ids, int nIds,
                                        byte[] outBuf, int bufSize);
        int     dm_tokenizer_vocab_size(Pointer tok);
        String  dm_tokenizer_token_text(Pointer tok, int id, IntByReference outLen);
        void    dm_tokenizer_free      (Pointer tok);
        int     dm_tokenizer_volt_run  (String corpusPath, int minSize,
                                        int maxSize, int nSteps, String outputPath);

        // § 5  Vision
        Pointer dm_vision_create (String modelType);
        int     dm_vision_init   (Pointer v, String savedModelDir, int classes,
                                  int imageSize, float widthMult, float lr);
        int     dm_vision_train  (Pointer v, String manifestPath,
                                  int epochs, int batchSize, float lr);
        int     dm_vision_eval   (Pointer v, String manifestPath,
                                  FloatByReference outLoss, FloatByReference outAcc);
        int     dm_vision_predict(Pointer v, float[] rgb, int h, int w,
                                  float[] outProbs, int nClasses);
        int     dm_vision_save   (Pointer v);
        void    dm_vision_free   (Pointer v);

        // § 6  LM
        Pointer dm_lm_create  (String modelType);
        int     dm_lm_train   (Pointer lm, String corpusPath, String checkpointDir,
                                int epochs, int batchSize, float lr);
        int     dm_lm_generate(Pointer lm, String prompt, int maxTokens,
                                byte[] outBuf, int bufSize);
        int     dm_lm_load    (Pointer lm, String checkpointDir);
        void    dm_lm_free    (Pointer lm);

        // § 9  Benchmark
        void    dm_bench_reset     ();
        void    dm_bench_start     (int phase);
        void    dm_bench_stop      (int phase);
        void    dm_bench_record    (NativeLong numPatterns, NativeLong totalItems);
        BenchReportStruct dm_bench_get_report();
        void    dm_bench_print     (String algoName, String datasetName);

        // § 10  BitSet
        Pointer  dm_bitset_create  (NativeLong nBits);
        Pointer  dm_bitset_copy    (Pointer src);
        void     dm_bitset_free    (Pointer bs);
        void     dm_bitset_set     (Pointer bs, NativeLong pos);
        void     dm_bitset_clear   (Pointer bs, NativeLong pos);
        boolean  dm_bitset_get     (Pointer bs, NativeLong pos);
        void     dm_bitset_and     (Pointer dest, Pointer src);
        void     dm_bitset_or      (Pointer dest, Pointer src);
        void     dm_bitset_not     (Pointer bs);
        void     dm_bitset_set_all (Pointer bs);
        NativeLong dm_bitset_popcount(Pointer bs);

        // § 11  DataGen
        Pointer dm_datagen_create(String type);
        int     dm_datagen_run   (Pointer gen, String spec,
                                  String outputPath, int seed);
        void    dm_datagen_free  (Pointer gen);

        // § 13  CLI
        int dm_cli_run(String command, int argc, String[] argv);

        // § 14  GPU
        Pointer dm_gpu_create     (int deviceIndex, String shaderDir);
        void    dm_gpu_free       (Pointer ctx);
        int     dm_gpu_ready      (Pointer ctx);
        int     dm_gpu_device_name(Pointer ctx, byte[] buf, NativeLong bufLen);

        // § 18  Experiment
        double  dm_timer_now                 ();
        double  dm_peak_ram_mb               ();
        double  dm_file_size_mb              (String path);
        double  dm_dir_size_mb               (String path);
        int     dm_ensure_dir                (String path);
        String  dm_path_basename             (String path);
        void    dm_experiment_write_header   (String csvPath);
        void    dm_experiment_generate_report(String resultsRoot);
    }

    /** DM_BenchReport mapped as a JNA Structure. */
    public static class BenchReportStruct extends Structure {
        public double[] phase_times_ms       = new double[4];
        public NativeLong peak_memory_kb;
        public double user_cpu_ms;
        public double sys_cpu_ms;
        public NativeLong result_ram_bytes;
        public NativeLong result_disk_est_bytes;
        public NativeLong num_patterns;
        public NativeLong total_items;
        public double throughput_mb_s;

        @Override
        protected java.util.List<String> getFieldOrder() {
            return java.util.Arrays.asList(
                "phase_times_ms", "peak_memory_kb",
                "user_cpu_ms", "sys_cpu_ms",
                "result_ram_bytes", "result_disk_est_bytes",
                "num_patterns", "total_items", "throughput_mb_s"
            );
        }
    }

    /** Library loader — tries DM_LIB env var then "dm". */
    private static final class LibraryLoader {
        static Library load() {
            String path = System.getenv("DM_LIB");
            if (path == null || path.isEmpty()) path = "dm";
            return (Library) com.sun.jna.Native.load(path, Native.class);
        }
    }

    private static final Native N = Native.INSTANCE;

    // ── Helpers ───────────────────────────────────────────────────────────────

    private static void check(int status, String ctx) {
        if (status != DM_OK)
            throw new RuntimeException(ctx + ": " + N.dm_strerror(status) +
                                       " (code " + status + ")");
    }

    // ── § 1  Core ─────────────────────────────────────────────────────────────

    public static String version()  { return N.dm_version(); }
    public static int[]  versionTuple() {
        int v = N.dm_version_number();
        return new int[]{ (v >> 16) & 0xFF, (v >> 8) & 0xFF, v & 0xFF };
    }
    public static void   init()     { check(N.dm_init(), "DM.init"); }
    public static String strerror(int code) { return N.dm_strerror(code); }

    // ── § 2  Dataset ──────────────────────────────────────────────────────────

    /**
     * RAII wrapper around DM_Dataset.
     * Use in try-with-resources.
     */
    public static final class Dataset implements AutoCloseable {
        private Pointer h;

        /**
         * @param type "transactional" | "utility" | "sequence" | "quantity" | "matrix"
         */
        public Dataset(String path, String type) {
            h = N.dm_dataset_open(path, type);
            if (h == null)
                throw new RuntimeException("DM.Dataset: failed to open '" + path +
                                           "' as '" + type + "'");
        }
        public long   count()  { return N.dm_dataset_count(h).longValue(); }
        public int    maxId()  { return N.dm_dataset_max_id(h); }
        @Override public void close() { N.dm_dataset_free(h); h = null; }
    }

    // ── § 3  Algorithm ────────────────────────────────────────────────────────

    /** RAII wrapper around DM_Algorithm. */
    public static final class Algorithm implements AutoCloseable {
        private Pointer h;

        /** @param id  one of the 132 algorithm IDs listed in dm.h § 3 */
        public Algorithm(String id) {
            h = N.dm_algorithm_create(id);
            if (h == null)
                throw new IllegalArgumentException("DM.Algorithm: unknown id '" + id + "'");
        }

        public void run(String datasetPath, String outputPath, double minSupport) {
            run(datasetPath, outputPath, minSupport, new String[0]);
        }
        public void run(String datasetPath, String outputPath,
                        double minSupport, String... extraArgs) {
            String[] args = java.util.Arrays.copyOf(extraArgs, extraArgs.length + 1);
            args[extraArgs.length] = null;
            check(N.dm_algorithm_run(h, datasetPath, outputPath, minSupport, args),
                  "DM.Algorithm.run");
        }

        public static java.util.List<String> listAll() {
            byte[] buf = new byte[32768];
            check(N.dm_algorithm_list(buf, buf.length), "DM.Algorithm.listAll");
            String s = Native.toString(buf);
            return java.util.Arrays.asList(s.split("\n"));
        }

        @Override public void close() { N.dm_algorithm_free(h); h = null; }
    }

    // ── § 4  Tokenizer ────────────────────────────────────────────────────────

    /** RAII wrapper around DM_Tokenizer. */
    public static final class Tokenizer implements AutoCloseable {
        private Pointer h;

        /**
         * @param type "bpe"|"bpe_dropout"|"unigram"|"sentencepiece"|"wordpiece"|
         *             "gpe"|"parity_bpe"|"volt"|"maximal_munch"|"faro"|"tokenizer_lab"
         */
        public Tokenizer(String type) {
            h = N.dm_tokenizer_create(type);
            if (h == null)
                throw new IllegalArgumentException("DM.Tokenizer: unknown type '" + type + "'");
        }
